--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div> 
       </div>
       <header id="great">Great</header>
-      <p>You scored higher than 65% of  the people who have taken <br> these tests.</p>
+      <p>You scored higher than 65% of <br> the people who have taken <br> these tests.</p>
     </div>
     
     <div class="right-container">
